UC alert tool/Content/Site.css
body{
    padding-top: 50px;
    padding-bottom: 20px;
}

/* Set padding to keep content from hitting the edges */
.body-content{
    padding-left: 15px;
    padding-right: 15px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt{
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea{
    max-width: 280px;
}
.maxWidth{
    max-width: 280px;
}
.TextAreaFor100Percent{
    width:100%;
}
#homepageTopWrapper{
    background-color:white;
    border-bottom: 1px solid black;
}
#homepageTop{
    max-width:700px;
}
.panel-primary {
    border-color: #e13a3d;
}
.panel-primary > .panel-heading{
   background-color:#e13a3d;
   border-color: #e13a3d;
}
.sidebar{
    z-index:1;
    position:absolute;
    width:250px;
    margin-top:5px;
}
.errortext{
    color:orangered;
    font-style:italic;
}
#totalCharacters{
    font-size:11px;
    font-style:italic;
}
.smallInformation{
    font-size:11px;
    font-style:italic;
}
#isGeslotenCheckbox{
    margin-left:0px;
}
.fullText{
    display:none;
}
.readmorelink{
    color:blue;
    text-decoration:underline;
    cursor:pointer;

}
#Summeryfield{
   max-width:560px;
}
.article{
    padding-left: 0px;
    padding-right: 0px;
}
.category-header{
    text-align: center;
}

